--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "angular2-loaders-css": "2.0.0",
     "apollo-angular": "1.0.1",
     "apollo-angular-link-http": "1.0.1",
-    "apollo-cache-inmemory": "^1.1.10",
-    "apollo-client": "^2.2.1",
-    "apollo-link-http": "^1.3.2",
+    "apollo-cache-inmemory": "1.1.10",
+    "apollo-client": "2.2.1",
+    "apollo-link-http": "1.3.2",
     "auth0-lock": "11.1.3",
     "body-parser": "1.18.2",
     "bootstrap": "4.0.0-alpha.6",
