--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "apollo-cache-inmemory": "1.1.10",
     "apollo-client": "2.2.1",
     "apollo-link-http": "1.3.2",
-    "auth0-lock": "11.1.3",
+    "auth0-js": "9.4.2",
+    "auth0-lock": "11.5.2",
     "body-parser": "1.18.2",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.5.3",
