--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "2.20.1",
     "ng2-toasty": "4.0.3",
     "ngx-chips": "1.8.0",
+    "ngx-cookie-service": "^1.0.10",
     "ngx-pagination": "3.0.3",
     "primeng": "5.2.0",
     "rxjs": "5.5.6",
