--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "5.2.3",
-    "@angular/common": "5.2.3",
-    "@angular/compiler": "5.2.3",
-    "@angular/core": "5.2.3",
-    "@angular/forms": "5.2.3",
-    "@angular/http": "5.2.3",
-    "@angular/platform-browser": "5.2.3",
-    "@angular/platform-browser-dynamic": "5.2.3",
-    "@angular/router": "5.2.3",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0",
-    "@types/jquery": "3.3.0",
-    "angular2-loaders-css": "2.0.0",
-    "apollo-angular": "1.0.1",
-    "apollo-angular-link-http": "1.0.1",
-    "apollo-cache-inmemory": "1.1.10",
-    "apollo-client": "2.2.1",
-    "apollo-link-http": "1.3.2",
+    "@agm/core": "1.0.0-beta.3",
+    "@angular/animations": "6.0.6",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/router": "6.0.6",
+    "@ng-bootstrap/ng-bootstrap": "2.1.2",
+    "@types/jquery": "3.3.4",
+    "apollo-angular": "1.1.2",
+    "apollo-angular-link-http": "1.1.1",
+    "apollo-cache-inmemory": "1.2.5",
+    "apollo-client": "2.3.5",
+    "apollo-link-http": "1.5.4",
     "auth0-js": "9.4.2",
     "auth0-lock": "11.5.2",
     "body-parser": "1.18.2",
@@ -49,23 +48,24 @@
     "graphql-tag": "2.6.1",
     "jquery": "3.3.1",
     "moment": "2.20.1",
-    "ng2-toasty": "4.0.3",
-    "ngx-chips": "1.8.0",
-    "ngx-cookie-service": "^1.0.10",
+    "ngx-chips": "1.9.2",
+    "ngx-cookie-service": "1.0.10",
     "ngx-pagination": "3.0.3",
-    "primeng": "5.2.0",
-    "rxjs": "5.5.6",
+    "ngx-toastr": "8.8.0",
+    "primeng": "6.0.0",
+    "rxjs": "6.2.1",
     "tether": "1.4.3",
-    "zone.js": "0.8.20"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.7",
-    "@angular/compiler-cli": "5.2.3",
-    "@angular/language-service": "5.2.3",
-    "@types/jasmine": "2.8.6",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular/language-service": "6.0.6",
+    "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "9.4.0",
-    "codelyzer": "4.1.0",
+    "@types/node": "10.3.6",
+    "codelyzer": "4.4.2",
     "jasmine-core": "2.9.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
@@ -77,6 +77,6 @@
     "protractor": "5.3.0",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.2"
+    "typescript": "2.7.2"
   }
 }
