--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lang:es": "ng serve --i18n-file=src/i18n/messages.travelgatex.es.xlf --locale=es --i18n-format=xlf",
-    "lang:en": "ng serve --i18n-file=src/i18n/messages.travelgatex.en.xlf --locale=en --i18n-format=xlf",
+    "lang:es": "ng serve --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-locale=es --i18n-format=xlf",
+    "lang:en": "ng serve --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-locale=en --i18n-format=xlf",
     "build:i18n:tgx": "npm run build:i18n:tgx:en && npm run build:i18n:tgx:es",
-    "build:i18n:tgx:en": "ng build --output-path=dist/en --aot --bh /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --locale=en",
-    "build:i18n:tgx:es": "ng build --output-path=dist/es --aot --bh /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --locale=es",
+    "build:i18n:tgx:en": "ng build --output-path=dist/en --aot --base-href /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --i18n-locale=en",
+    "build:i18n:tgx:es": "ng build --output-path=dist/es --aot --base-href /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --i18n-locale=es",
     "build:i18n:tgx:prod": "npm run build:i18n:tgx:prod:en && npm run build:i18n:tgx:prod:es",
-    "build:i18n:tgx:prod:en": "ng build --output-path=dist/en --aot --prod --bh /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --locale=en",
-    "build:i18n:tgx:prod:es": "ng build --output-path=dist/es --aot --prod --bh /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --locale=es"
+    "build:i18n:tgx:prod:en": "ng build --output-path=dist/en --aot --prod --base-href /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --i18n-locale=en",
+    "build:i18n:tgx:prod:es": "ng build --output-path=dist/es --aot --prod --base-href /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --i18n-locale=es"
   },
   "private": true,
   "dependencies": {
