--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lang:es": "ng serve --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-locale=es --i18n-format=xlf",
-    "lang:en": "ng serve --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-locale=en --i18n-format=xlf",
+    "lang:es": "ng serve --configuration=es",
+    "lang:en": "ng serve --configuration=en",
     "build:i18n:tgx": "npm run build:i18n:tgx:en && npm run build:i18n:tgx:es",
     "build:i18n:tgx:en": "ng build --output-path=dist/en --aot --base-href /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --i18n-locale=en",
     "build:i18n:tgx:es": "ng build --output-path=dist/es --aot --base-href /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --i18n-locale=es",
