--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apollo-cache-inmemory": "1.2.5",
     "apollo-client": "2.3.5",
     "apollo-link-http": "1.5.4",
+    "apollo-utilities": "1.0.22",
     "auth0-js": "9.6.1",
     "auth0-lock": "11.7.2",
     "body-parser": "1.18.3",
