feat(core): add use of apiKey by http interceptor

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "jquery": "3.3.1",
+    "lodash": "4.17.11",
     "moment": "2.22.2",
     "ngx-chips": "1.9.2",
     "ngx-cookie-service": "1.0.10",
@@ -67,6 +68,7 @@
     "@angular/language-service": "6.0.6",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
+    "@types/lodash": "4.14.119",
     "@types/node": "10.3.6",
     "codelyzer": "4.4.2",
     "jasmine-core": "3.1.0",
