--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -20,6 +20,7 @@
       "autoclose": true
     }
   },
+  "apiKey": "10000001-1001-1001-1001-100000000001",
   "languages": ["en", "es"],
   "googleMapsKey": "AIzaSyDnnHGVUJJCRIzFTmRwdASd60QnQi2L7LY",
   "organization": {
