--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:i18n:en": "ng build --output-path=dist/en --aot --base-href /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --i18n-locale=en",
     "build:i18n:es": "ng build --output-path=dist/es --aot --base-href /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --i18n-locale=es",
     "build:i18n:prod": "npm run build:i18n:prod:en && npm run build:i18n:prod:es",
-    "build:i18n:prod:en": "ng build --output-path=dist/en --aot --prod --base-href /en/ --i18n-file=src/i18n/messages.travelgatex.en.xlf --i18n-format=xlf --i18n-locale=en",
-    "build:i18n:prod:es": "ng build --output-path=dist/es --aot --prod --base-href /es/ --i18n-file=src/i18n/messages.travelgatex.es.xlf --i18n-format=xlf --i18n-locale=es"
+    "build:i18n:prod:en": "ng build --output-path=dist/en --aot --prod --base-href /en/ --i18n-file=src/i18n/messages.tra.en.xlf --i18n-format=xlf --i18n-locale=en",
+    "build:i18n:prod:es": "ng build --output-path=dist/es --aot --prod --base-href /es/ --i18n-file=src/i18n/messages.tra.es.xlf --i18n-format=xlf --i18n-locale=es"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +45,7 @@
     "body-parser": "1.18.3",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.5.7",
+    "file-saver": "^2.0.2",
     "firebase": "5.1.0",
     "font-awesome": "4.7.0",
     "graphql": "0.13.2",
